[tool.poetry]
name = "coding_game"
version = "0.1.0"
description = ""
authors = ["Shparki <matt.murray@pnmac.com>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.5"
numpy = "^1.19.4"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pydocstyle = "^5.1.1"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
